--- a/ma-premiere-application/src/app/potion-resume/potion-resume.component.html
+++ b/ma-premiere-application/src/app/potion-resume/potion-resume.component.html
@@ -4,7 +4,9 @@
         <div class="col s12 m6">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">{{ potion.name }}</span>
+              <span class="card-title">
+                <input type="text" name="name" [(ngModel)]="potion.name">
+              </span>
 
                 <b *ngIf="potion.name=='Polynectar'">Super effet : nectar !</b>
 
@@ -14,6 +16,7 @@
             </div>
             <div class="card-action">
                 <a class="waves-effect waves-light btn" (click)="showDetail()">Détails</a>
+                <a class="waves-effect waves-light btn" (click)="save()">Sauvegarder</a>
             </div>
           </div>
         </div>
